@@ -1,6 +1,10 @@
+2010-04-28  Robby Stephenson  <robby@periapsis.org>
+
+	* Changed Amazon Japan video search to include DVDs.
+
 2010-04-27  Robby Stephenson  <robby@periapsis.org>
 
-	* Updated allocine.fr script to version 0.7.1.
+	* Updated allocine.fr script to version 0.7.1, patch from Romain Henriet.
 
 2010-03-29  Robby Stephenson  <robby@periapsis.org>
 
